--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -4,6 +4,7 @@ include:
     - core
     - cli
     - fetch
+    - osplatform
     - contrib.openstack|inc=*
     - contrib.python.packages
     - contrib.storage
